--- a/deploy_pulp_in_one_container.yml
+++ b/deploy_pulp_in_one_container.yml
@@ -66,7 +66,7 @@
     # after without checking syntax. Ensure you use correct syntax otherwise Pulp will be unhappy!
     pulp_settings: |
       CONTENT_ORIGIN = 'http://{{ inventory_hostname }}:8080'
-      ALLOWED_CONTENT_CHECKSUMS = ["md5", "sha224", "sha256", "sha384", "sha512"]
+      ALLOWED_CONTENT_CHECKSUMS = ["md5", "sha1", "sha256"]
       ANSIBLE_API_HOSTNAME = 'http://{{ inventory_hostname }}:8080'
       ANSIBLE_CONTENT_HOSTNAME = 'http://{{ inventory_hostname }}:8080/pulp/content'
       CACHE_ENABLED = True
