Update components and ensure pulp_glue on remote
This updates used Python requirements and Ansible collections. The
updated pulp.squeezer collection depends on the pulp_glue library. We
run the pulp.squeezer modules on the target node and therefor need to
make sure pulp_glue is available there. This commit installs pulp_glue
using pip in user mode to solve that dependency.

--- a/deploy_pulp_in_one_container.yml
+++ b/deploy_pulp_in_one_container.yml
@@ -75,6 +75,11 @@
     pulp_admin_password: 'secret'
 
   tasks:
+    - name: Ensure pulp_glue python dependency of pulp.squeezer collection
+      ansible.builtin.pip:
+        name: pulp-glue==0.23.2
+        state: present
+
     - name: Ensure directories to preserve Pulp state are present
       ansible.builtin.file:
         path: "{{ item.dir }}"
