--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
-ansible-core==2.16.2
-certifi==2023.11.17
+ansible-core==2.16.6
+certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
-cryptography==41.0.7
-idna==3.6
-Jinja2==3.1.2
-MarkupSafe==2.1.3
+click==8.1.7
+contextlib2==21.6.0
+cryptography==42.0.5
+idna==3.7
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 packaging==23.2
-pulp-glue>=0.19.0,<0.20.0
-pycparser==2.21
+pycparser==2.22
 PyYAML==6.0.1
 requests==2.31.0
 resolvelib==1.0.1
-urllib3==2.1.0
+schema==0.7.5
+toml==0.10.2
+urllib3==2.2.1
