--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ idna==3.7
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 packaging==23.2
+pulp-glue>=0.20.0,<=0.23.2
 pycparser==2.22
 PyYAML==6.0.1
 requests==2.31.0
